<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">华数互动电视</string>
    <string name="hello_world">Hello world!</string>
    <string name="lau_action_settings">Settings</string>
    <string name="lau_recommend">推荐</string>
    <string name="lau_live">直播</string>
    <string name="lau_vod">点播</string>
    <string name="lau_game">游戏</string>
    <string name="lau_music">K歌</string>
    <string name="lau_user">个人</string>
    <string name="lau_def_time">08:00</string>
    <string name="lau_def_date">1/1/2015</string>
    <string name="smart">智能</string>
    <string name="registered">注册</string>
    <string name="login">登录</string>
    <string name="updateaddress">修改地址</string>
    <string name="phone">手机号码:</string>
    <string name="verificationcode">验   证   码</string>
    <string name="address">家庭地址:</string>
    <string name="obtaincode">获取验证码</string>
    <string name="china">中国</string>
    <string name="province">省</string>
    <string name="city">城市</string>
    <string name="county">县区</string>
    <string name="post">提交注册</string>
    <string name="post_login">提交登录</string>
    <string name="post_upate">提交修改</string>
    <string name="prompt_dialog">提示</string>
    <string name="prompt">＊请务必填写真实信息，便于我们提供更好的服务</string>
    <string name="prompt_phone">＊请正确填写手机号码</string>
    <string name="prompt_phone1">＊该手机号码不正确</string>
    <string name="error_prompt_phone">＊该手机号码不存在</string>
    <string name="prompt_address">＊请完整填写地址信息！</string>
    <string name="tongyi">同意</string>
    <string name="butongyi">不同意,退出</string>

    <string name="lau_cancel">取消</string>    
    <string name="lau_play_confirm">确定</string>
    <string name="smart_home">智慧家庭</string>
    <string name="prompt_register">立即注册成华数会员，享受视觉盛宴!</string>
    <!-- 个人屏 -->
    <string name="personal_payment">充值缴费</string>
    <string name="personal_user_balance">账户余额：</string>
    <string name="personal_setting">设置</string>
    <string name="personal_help">帮助</string>
    <string name="personal_order">产品订购</string>
    <string name="personal_history">我的历史</string>
    <string name="personal_smart">智能家居</string>
    <string name="personal_collection">我的收藏</string>
    
    <!-- 推荐 -->
    <string name="rec_play_history">观看至%s</string>
    <string name="rec_play_history_series">观看至第%d集</string>
    
    <!-- 直播 -->
    <string name="column_kanba_epg">18:30:00 探索发现</string>
    <string name="live_hot_channel">热门频道</string>
    <string name="live_tv_playback">电视回放</string>
    <string name="live_tv_update">更新至第%d集</string>
    
    <!-- 播放模式 -->
    <string name="play_model_seq">顺序播放</string>
    <string name="play_model_single">单曲循环</string>
    <string name="play_model_random">随机播放</string>
</resources>