<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lau__wasu_background" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/sm_250"
        android:layout_marginLeft="@dimen/sm_100"
        android:layout_marginRight="@dimen/sm_100"
        android:layout_marginTop="@dimen/sm_40"
        android:background="#56ffffff" >

        <LinearLayout
            android:id="@+id/ll_Titl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/sm_310"
            android:layout_marginTop="@dimen/sm_20"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/rb_registered"
                style="@style/TitleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/sm_200"
                android:focusable="true"
                android:nextFocusDown="@+id/phone_edit"
                android:nextFocusRight="@+id/rb_login"
                android:text="@string/registered"
                android:textSize="@dimen/sm_40" />

            <TextView
                style="@style/TitleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sm_35"
                android:text="@string/login"
                android:textSize="@dimen/sm_40" />
        </LinearLayout>

        <TextView
            android:id="@+id/rb_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ll_Titl"
            android:layout_below="@+id/ll_Titl"
            android:layout_marginTop="@dimen/sm_7"
            android:text="@string/prompt"
            android:textColor="#6C6C6C"
            android:textSize="@dimen/sm_20" />

        <TextView
            android:id="@+id/txt_phone"
            android:layout_width="@dimen/sm_110"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rb_prompt"
            android:layout_marginLeft="@dimen/sm_140"
            android:layout_marginTop="@dimen/sm_10"
            android:text="@string/phone"
            android:textColor="#000000"
            android:textSize="@dimen/sm_25" />

        <EditText
            android:id="@+id/phone_edit"
            style="@style/EditTextStyle"
            android:layout_width="@dimen/sm_340"
            android:layout_height="@dimen/sm_40"
            android:layout_alignBottom="@+id/txt_phone"
            android:layout_alignLeft="@+id/rb_prompt"
            android:layout_toRightOf="@+id/txt_phone"
            android:nextFocusDown="@id/verification_edit"
            android:nextFocusRight="@id/code_btn" />

        <Button
            android:id="@+id/code_btn"
            style="@style/ButtonStyle"
            android:layout_width="@dimen/sm_152"
            android:layout_height="@dimen/sm_32"
            android:layout_alignBottom="@+id/phone_edit"
            android:layout_marginLeft="@dimen/sm_20"
            android:layout_toRightOf="@+id/phone_edit"
            android:nextFocusLeft="@id/phone_edit"
            android:text="@string/obtaincode"
            android:textSize="@dimen/sm_22" />

        <TextView
            android:id="@+id/rb_prompt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/rb_prompt"
            android:layout_below="@+id/phone_edit"
            android:layout_marginTop="@dimen/sm_7"
            android:text="@string/prompt_phone1"
            android:textColor="#6C6C6C"
            android:textSize="@dimen/sm_20" />

        <TextView
            android:id="@+id/txt_code"
            android:layout_width="@dimen/sm_110"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rb_prompt1"
            android:layout_marginLeft="@dimen/sm_140"
            android:layout_marginTop="@dimen/sm_10"
            android:gravity="left"
            android:text="@string/verificationcode"
            android:textColor="#000000"
            android:textSize="@dimen/sm_25" />

        <EditText
            android:id="@+id/verification_edit"
            style="@style/EditTextStyle"
            android:layout_width="@dimen/sm_340"
            android:layout_height="@dimen/sm_40"
            android:layout_alignBottom="@+id/txt_code"
            android:layout_alignLeft="@+id/rb_prompt1"
            android:layout_toRightOf="@+id/txt_code"
            android:nextFocusDown="@+id/spin_province" />

        <TextView
            android:id="@+id/txt_address"
            android:layout_width="@dimen/sm_110"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_code"
            android:layout_marginLeft="@dimen/sm_140"
            android:layout_marginTop="@dimen/sm_30"
            android:text="@string/address"
            android:textColor="#000000"
            android:textSize="@dimen/sm_25" />

        <TextView
            android:id="@+id/countries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txt_address"
            android:layout_alignLeft="@+id/rb_prompt1"
            android:layout_toRightOf="@+id/txt_address"
            android:text="@string/china"
            android:textColor="#000000"
            android:textSize="@dimen/sm_25" />

        <Spinner
            android:id="@+id/spin_province"
            style="@style/SpinnerStyle"
            android:layout_width="@dimen/sm_105"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/countries"
            android:layout_marginLeft="@dimen/sm_10"
            android:layout_toRightOf="@+id/countries"
            android:nextFocusRight="@+id/spin_city"
            android:prompt="@string/province" />

        <TextView
            android:id="@+id/txt_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/spin_province"
            android:layout_marginLeft="@dimen/sm_30"
            android:layout_toRightOf="@+id/spin_province"
            android:text="@string/city"
            android:textColor="#000000"
            android:textSize="@dimen/sm_25" />

        <Spinner
            android:id="@+id/spin_city"
            style="@style/SpinnerStyle"
            android:layout_width="@dimen/sm_105"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/txt_city"
            android:layout_marginLeft="@dimen/sm_7"
            android:layout_toRightOf="@+id/txt_city"
            android:nextFocusRight="@+id/spin_county"
            android:prompt="@string/city" />

        <TextView
            android:id="@+id/txt_county"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/spin_city"
            android:layout_marginLeft="@dimen/sm_30"
            android:layout_toRightOf="@+id/spin_city"
            android:text="@string/county"
            android:textColor="#000000"
            android:textSize="@dimen/sm_25" />

        <Spinner
            android:id="@+id/spin_county"
            android:layout_width="@dimen/sm_105"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/txt_county"
            android:layout_marginLeft="@dimen/sm_7"
            android:layout_toRightOf="@+id/txt_county"
           android:focusable="true"
            android:prompt="@string/county"
            android:spinnerMode="dropdown"
            android:textColor="#000000"
            android:textSize="@dimen/sm_25" />

        <Button
            android:id="@+id/post_btn"
            style="@style/ButtonStyle"
            android:layout_width="@dimen/sm_179"
            android:layout_height="@dimen/sm_58"
            android:layout_alignLeft="@+id/rb_prompt"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/sm_20"
            android:layout_marginLeft="@dimen/sm_134"
            android:paddingBottom="@dimen/sm_16"
            android:paddingLeft="@dimen/sm_48"
            android:paddingRight="@dimen/sm_48"
            android:paddingTop="@dimen/sm_16"
            android:text="@string/post"
            android:textSize="@dimen/sm_20" />
    </RelativeLayout>

</RelativeLayout>