<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lau__wasu_background" >

    <LinearLayout
        android:id="@+id/wasu_register_line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/sm_40"
        android:layout_marginTop="@dimen/sm_20"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/rb_registered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/registered"
            android:textColor="#aaffffff"
            android:textSize="@dimen/sm_56" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wasu_register_line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wasu_register_line1"
        android:layout_marginTop="@dimen/sm_20"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/rb_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sm_252"
            android:text="@string/prompt_register"
            android:textColor="@color/lau_white"
            android:textSize="@dimen/sm_40" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wasu_register_line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wasu_register_line2"
        android:layout_marginTop="@dimen/sm_56"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_address"
            android:layout_width="@dimen/sm_240"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/sm_252"
            android:text="@string/address"
            android:textColor="@color/lau_white"
            android:textSize="@dimen/sm_40" />

        <TextView
            android:id="@+id/countries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/china"
            android:textColor="@color/lau_white"
            android:textSize="@dimen/sm_30" />

        <Spinner
            android:id="@+id/spin_province"
            style="@style/SpinnerStyle"
            android:layout_width="@dimen/sm_105"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/sm_10"
            android:nextFocusRight="@+id/spin_city"
            android:prompt="@string/province"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txt_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="一浙江省"
            android:textColor="@color/lau_white"
            android:textSize="@dimen/sm_30" />

        <Spinner
            android:id="@+id/spin_city"
            style="@style/SpinnerStyle"
            android:layout_width="@dimen/sm_150"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/txt_city"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/sm_7"
            android:nextFocusRight="@+id/spin_county"
            android:prompt="@string/city"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txt_county"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="一杭州市一"
            android:textColor="@color/lau_white"
            android:textSize="@dimen/sm_30" />

        <Spinner
            android:id="@+id/spin_county"
            android:layout_width="@dimen/sm_180"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/sm_7"
            android:background="@drawable/bg_edittext_2"
            android:focusable="true"
            android:popupBackground="@drawable/lau_register_popup_bg"
            android:prompt="@string/county"
            android:spinnerMode="dropdown"
            android:dropDownVerticalOffset="@dimen/sm_7"
            android:textColor="@color/lau_no_thanks_textcolor_selector"
            android:textSize="@dimen/sm_30" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wasu_register_line4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wasu_register_line3"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/rb_prompt0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sm_252"
            android:layout_marginTop="@dimen/sm_7"
            android:text="＊请选择正确的区县"
            android:textColor="#e8a02f"
            android:textSize="@dimen/sm_24"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wasu_register_line5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wasu_register_line4"
        android:layout_marginTop="@dimen/sm_20"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_phone"
            android:layout_width="@dimen/sm_240"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sm_252"
            android:layout_marginTop="@dimen/sm_10"
            android:text="@string/phone"
            android:textColor="@color/lau_white"
            android:textSize="@dimen/sm_40" />

        <EditText
            android:id="@+id/phone_edit"
            style="@style/EditTextStyle"
            android:layout_width="@dimen/sm_320"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sm_10"
            android:background="@drawable/bg_edittext_2"
            android:nextFocusDown="@id/verification_edit"
            android:textColor="@color/lau_white"
            android:textSize="@dimen/sm_30" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wasu_register_line6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wasu_register_line5"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/rb_prompt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sm_252"
            android:layout_marginTop="@dimen/sm_7"
            android:text="@string/prompt_phone1"
            android:textColor="#e8a02f"
            android:textSize="@dimen/sm_24" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wasu_register_line7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wasu_register_line6"
        android:layout_marginTop="@dimen/sm_20"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/post_btn"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sm_20"
            android:layout_marginLeft="@dimen/sm_400"
            android:background="@drawable/vod_purchase_bt_selector"
            android:paddingBottom="@dimen/sm_16"
            android:paddingLeft="@dimen/sm_48"
            android:paddingRight="@dimen/sm_48"
            android:paddingTop="@dimen/sm_16"
            android:text="@string/post"
            android:textColor="@color/vod_no_thanks_textcolor_selector"
            android:textSize="@dimen/sm_24" />

        <Button
            android:id="@+id/rb_prompt_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sm_20"
            android:layout_marginLeft="@dimen/sm_100"
            android:background="@drawable/vod_purchase_bt_selector"
            android:paddingBottom="@dimen/sm_16"
            android:paddingLeft="@dimen/sm_48"
            android:paddingRight="@dimen/sm_48"
            android:paddingTop="@dimen/sm_16"
            android:text="跳过 >>"
            android:textColor="@color/vod_no_thanks_textcolor_selector"
            android:textSize="@dimen/sm_24" />
    </LinearLayout>

</RelativeLayout>